--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^6.2.0",
     "@mui/x-date-pickers": "^7.23.2",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "next": "15.1.0",
